# nix-template

./: boom.cabal  flake.nix
app/: Main.hs
src/: Boom.hs
test/: BoomSpec.hs
