cabal-version:       3.0
name:                boom
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            boom
description:         boom.
Homepage:            http://github.com/blackheaven/boom

library
  default-language:   Haskell2010
  build-depends:
        base == 4.*
  hs-source-dirs: src
  exposed-modules:
      Boom
  other-modules:
      Paths_boom
  autogen-modules:
      Paths_boom
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite boom-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      BoomSpec
      Paths_boom
  autogen-modules:
      Paths_boom
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , boom
    , hspec
    , hspec-core
    , hspec-discover
  default-language: Haskell2010

executable boom
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , boom
  default-language: Haskell2010
